--- a/index.html
+++ b/index.html
@@ -24,6 +24,37 @@
         </div>
     </nav> 
 
+    <!-- hero section -->
+<div class="container mx-auto d-flex d-flex-col justify-content-between">
+    <div class="row gap-5 gap-md-0 py-5">
+        <div class="col-12 col-md-5 py-3 my-5">
+            <h1 class="fw-bold large-text">CAPTURING MOMENTS <span class="text-danger">IN</span>  TIME </h1>
+            <p>A Glimpse into the Past, a Snapshot of the Present</p>
+            <button type="submit" class="btn btn-warning btn-lg">Get Started</button>
+        </div>
+        <div class="col-12 col-md-7 py-1 d-flex">
+            <div id="carousel1" class="carousel slide">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="images/Rectangle 32.png" alt="" class="d-block w-100 h-75">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/Rectangle 32.png" alt="" class="d-block w-100">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carousel1" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                  </button>
+                  <button class="carousel-control-next" type="button" data-bs-target="#carousel1" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                  </button>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 
 
