--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li class="navbar-items"><a class="text-decoration-none" href="#">Prices</a></li>
                 <li class="navbar-items"><a class="text-decoration-none" href="#">Contact us</a></li>
             </ul>
-            <button type="submit" class="btn btn-warning btn-lg">Get Started</button>
+            <button type="submit" class="btn btn-warning btn-lg custom-btn">Get Started</button>
         </div>
     </nav> 
 
@@ -28,9 +28,9 @@
 <div class="container mx-auto d-flex d-flex-col justify-content-between">
     <div class="row gap-5 gap-md-0 py-5">
         <div class="col-12 col-md-5 py-3 my-5">
-            <h1 class="fw-bold large-text">CAPTURING MOMENTS <span class="text-danger">IN</span>  TIME </h1>
+            <h1 class="fw-bold large-text">CAPTURING MOMENTS <span class="text-danger">IN</span>  TIME</h1>
             <p>A Glimpse into the Past, a Snapshot of the Present</p>
-            <button type="submit" class="btn btn-warning btn-lg">Get Started</button>
+            <button type="submit" class="btn btn-warning btn-lg custom-btn">Get Started</button>
         </div>
         <div class="col-12 col-md-7 py-1 d-flex">
             <div id="carousel1" class="carousel slide">
@@ -55,6 +55,49 @@
     </div>
 </div>
 
+<!--about us section  -->
+<div class="custom-bg mt-5">
+    <div class="container">
+        <div class="row gap-5">
+          <div class="col-11 col-md-5 ms-3 ms-md-0 order-2 order-md-1">
+            <div class="row">
+                <div class="px-5 py-0">
+                    <div class="row mt-md-5 pt-md-4">
+                      <div class="col-6">
+                        <img src="images/Rectangle 5.png" alt="" class="img-fluid">
+                      </div> 
+                       <div class="col-6">
+                        <div class="row gap-5">
+                           <div class="col-12">
+                            <img src="images/Rectangle 6.png" alt="" class="img-fluid">
+                           </div>
+                           <div class="col-12 mt-4 mt-md-4">
+                            <img src="images/Rectangle 7.png" alt="" class="img-fluid">
+                           </div> 
+                        </div>
+                       </div>
+                    </div>
+                </div>
+            </div>
+          </div> 
+          <div class="col-11 col-md-5 order-1 order-md-2">
+            <p class="blockquote-footer text-black">About Us</p>
+            <h1 class="custom-heading text-black fw-bold">We Are Very <span class="custom-color">Skilled</span> in <span class="custom-color">Photography</span></h1>
+            <p>Hi, I'm Angelique and photography is my passion! My father passed on the “photographer virus” to me. From analogue to digital. I have taken a number of courses and workshops and, above all, practiced a lot! My children are now used to modeling. Perhaps that is where the penchant for taking photos of children comes from. The pure appearance and enthusiasm of children. It's always fun!</p>
+            <blockquote>Photography is the art of frozen time… the ability to store emotions and feelings within a frame.”</blockquote>
+
+            <button type="button" class="btn btn-info custom-btn">See Our Portfolio</button>
+          </div> 
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
+   
 
 
 
@@ -63,5 +106,5 @@
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
