--- a/index.html
+++ b/index.html
@@ -92,7 +92,35 @@
     </div>
 </div>
 
+<!-- our portfolio section -->
+ <div class="bg-white w-100">
+    <div class="container py-5">
+        <h1 class="fw-bold text-center">Our <span class="custom-color">Portfolio</span></h1>
+    </div>
+    <nav class="container navbar border rounded-3 box-shadow ">
+        <ul class="w-100 nav px-4 d-flex justify-content-between">
+            <li class="navbar-items"><a class="nav-link" href="#">All</a></li>
+            <li class="navbar-items"><a class="nav-link active" href="#">Childrens</a></li>
+            <li class="navbar-items"><a class="nav-link" href="#">Potraits</a></li>
+            <li class="navbar-items"><a class="nav-link" href="#">Family</a></li>
+            <li class="navbar-items"><a class="nav-link" href="#">Other Photography</a></li>
+        </ul>
+    </nav>
+    <div class="container image-grid mx-md-5">
+        <div class="img1"><img src="images/Rectangle 11.png" alt=""></div>
+        <div class="img2"><img src="images/Rectangle 12.png" alt=""></div>
+        <div class="img3"><img src="images/Rectangle 13.png" alt=""></div>
+        <div class="img4"><img src="images/Rectangle 14.png" alt=""></div>
+        <div class="img5"><img src="images/Rectangle 15.png" alt=""></div>
+        <div class="img6"><img src="images/Rectangle 16.png" alt=""></div>
+        <div class="img7"><img src="images/Rectangle 17.png" alt=""></div>
+        <div class="img8"><img src="images/Rectangle 18.png" alt=""></div>
+        <div class="img9"><img src="images/Rectangle 19.png" alt=""></div>
+        <div class="img10"><img src="images/Rectangle 20.png" alt=""></div>
+    </div>
+ </div>
 
+ 
 
 
 
