price section done

--- a/index.html
+++ b/index.html
@@ -120,7 +120,46 @@
     </div>
  </div>
 
- 
+ <!-- price section -->
+<div class="container py-5">
+    <h1 class="fw-bold text-center mb-5">Prices</h1>
+    <div class="container">
+        <div class="row gap-3 gap-md-0">
+            <div class="col-12 col-md-4">
+                <div class="card text-center">
+                    <div class="card-body">
+                        <h1 class="card-title text-balck">Children's photography/family/pregnancy/ <br> loveshoot</h1>
+                        <p class="card-text">The price for this is €50.00 (incl. VAT) and takes approximately one hour.For that you get 10/15 edited digital files in large format.</p>
+                        <h1 class="card-title text-blck fw-bold">&euro;50.00</h1>
+                        <button type="button" class="btn custom-btn">Get Purchase</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-4">
+                <div class="card bg-black text-center">
+                    <div class="card-body">
+                        <h1 class="card-title text-white">Lifestyle Photography</h1>
+                        <p class="card-text py-5 text-white">Lifestyle photography takes place at your home in a relaxed setting. The price for this depends on how long we take. Inquire about the possibilities.</p>
+                        <h1 class="card-title text-white fw-bold">&euro;50.00</h1>
+                        <button type="button" class="btn custom-btn">Get Purchase</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-4">
+                <div class="card text-center">
+                    <div class="card-body">
+                        <h1 class="card-title text-balck">Potrait Photography</h1><br>
+                        <p class="card-text">Portrait photography and girlfriend shoots are also possible.</p><br>
+                        <h1 class="card-title text-blck fw-bold">&euro;50.00</h1>
+                        <button type="button" class="btn custom-btn">et Purchase</button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+    
 
 
 
