--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Kieke-Photography</title>
-
+    <script src="https://kit.fontawesome.com/a14a9cf491.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
   </head>
@@ -160,6 +160,32 @@
     </div>
 </div>
     
+<!--testimonials section  -->
+<div class="w-100" >
+    <div class="container py-5">
+        <div class="d-flex flex column flex-md-row gap-5">
+            <div>
+                <p class="text-balck fw-bold py-3">Testimonials</p>
+                <h1 class="text-balck fw-bold py-3">What Our Clients Say</h1>
+                <p class="text-balck py-3">This photography website is a true gem for anyone who appreciates artistry and storytelling through the lens. The images are awe-inspiring, and the website provides an engaging and immersive experience. With a few minor enhancements in user-friendliness and performance, it could become an even more exceptional platform for showcasing photography talent.</p>
+                <div class="d-flex gap-5">
+                    <div class="d-inline-flex px-3 bg-danger rounded-5">
+                        <img src="images/Ellipse 1.png" alt="">
+                        <p class="ms-3">Amane Indahnya</p>
+                    </div>
+                    <div class="d-flex gap-4">
+                        <div class="p-3 border border-black rounded-circle"><i class="fa-solid fa-arrow-left"></i></div>
+                        <div class="p-3 border border-black rounded-circle"><i class="fa-solid fa-arrow-right"></i></div>
+                    </div>
+                </div>
+            </div>
+            <img src="images/Rectangle 24.png" alt="" class="img-fluid">
+        </div>
+
+    </div>
+</div>
+
+
 
 
 
