instagram section done

--- a/index.html
+++ b/index.html
@@ -185,7 +185,30 @@
     </div>
 </div>
 
-
+<!-- instagram section -->
+ <div class="container py-3">
+    <div class="d-flex justify-content-between">
+        <h2 class="fw-bolder">Instagram Feed</h2>
+        <button type="button" class="btn custom-btn btn-lgpx-5">Join Now</button>
+    </div>
+    <div class="container py-3">
+        <div class="row gap-">
+            <div class="col-12 col-md-6 mb-3 mb-md-0">
+                <img src="images/Rectangle 40.png" alt="" class="img-fluid">
+                <img src="images/Rectangle 35.png" alt="" class="img-fluid mt-3">
+            </div>
+            <div class="col-6 col-md-3"> 
+                <img src="images/Rectangle 36.png" alt="" class="img-fluid">
+                <img src="images/Rectangle 38.png" alt="" class="img-fluid mt-3">
+            </div>
+            <div class="col-6 col-md-3"> 
+                <img src="images/Rectangle 37.png" alt="" class="img-fluid">
+                <img src="images/Rectangle 39.png" alt="" class="img-fluid mt-3">
+            </div>
+        </div>
+    </div>
+ </div>
+ 
 
 
 
