--- a/index.html
+++ b/index.html
@@ -208,7 +208,36 @@
         </div>
     </div>
  </div>
+
+ <!-- form section -->
+<div class="container py-3">
+    <div class="row">
  
+        <div class="col-12 col-md-6">
+            <div class="form">
+                <div>
+                    <h2 class="fs-bold">Have A Question?</h2>
+                    <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div>
+                <div class="mb-3 w-100">
+                    <label for="name" class="form-label">Name:</label>
+                    <input type="text" class="form-control w-100" id="name">
+                </div>
+                <div class="mb-3 w-100">
+                    <label for="mail" class="form-label">E-mail:</label>
+                    <input type="email" class="form-control w-100" id="mail">
+                </div>
+                <div class="mb-3 w-100">
+                    <label for="message" class="form-label">Message:</label>
+                    <textarea name="message" id="message" class="form-control w-100" rows="8"></textarea>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+</div>
+
 
 
 
