--- a/index.html
+++ b/index.html
@@ -234,7 +234,32 @@
             </div>
 
         </div>
+        <div class="col-12 col-md-6 rounded-3 ps-3">
+            <h3 class="pt-5">Get in Touch!</h3>
+            <p class="py-3">We love to hear from you.Our friendly Team is always here to chat.</p>
+            <div class="d-flex mb-3">
+                <i class="fa-solid fa-location-dot"></i>
+                <div class="ps-3">
+                    <h5>Location</h5>
+                    <p>199 Nueces ST,Austin,TX 78701</p>
+                </div>
+            </div>
+            <div class="d-flex mb-3">
+                <i class="fa-solid fa-phone-volume"></i>
+                <div class="ps-3">
+                    <h5>Phone:</h5>
+                    <p>+1(456)666-4077</p>
+                </div>
+            </div>
+            <div class="d-flex mb-3">
+                <i class="fa-regular fa-envelope"></i>
+                <div class="ps-3">
+                    <h5>Email:</h5>
+                    <p>support@free.com</p>
+                </div>
 
+            </div>
+        </div>
     </div>
 </div>
 
