--- a/index.html
+++ b/index.html
@@ -263,8 +263,32 @@
     </div>
 </div>
 
+<!-- footer section  -->
+<footer class="w-100 bg-black">
+    <div class="px-5 py-2 d-flex justify-content-between">
+        <div class="">
+            <a href="#"> <img src="images/logoKiekeFotografie-e1460817748238 1.png" alt="" class="img fluid"></a>
+        </div>
+        <div class="d-flex align-items-center">
+            <a href="#" class="text-white">Privacy Policy</a>
+            <a href="#" class="text-white">Terms & Conditions</a>
+        </div>
+        <div class="d-none d-md-inline-flex ">
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-twitter"></i>
+        </div>
+    </div>
+    <div class="text-center">
+        &copy;All Rights Reserved Antor Sutradhar 2024
+    </div>
+</footer>
 
 
+
+
+
+<!-- end -->
 
 
    
