--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 <!--testimonials section  -->
 <div class="w-100" >
     <div class="container py-5">
-        <div class="d-flex flex column flex-md-row gap-5">
+        <div class="d-flex flex-column flex-md-row gap-5">
             <div>
                 <p class="text-balck fw-bold py-3">Testimonials</p>
                 <h1 class="text-balck fw-bold py-3">What Our Clients Say</h1>
@@ -265,21 +265,22 @@
 
 <!-- footer section  -->
 <footer class="w-100 bg-black">
-    <div class="px-5 py-2 d-flex justify-content-between">
+    <div class="d-flex justify-content-between">
         <div class="">
             <a href="#"> <img src="images/logoKiekeFotografie-e1460817748238 1.png" alt="" class="img fluid"></a>
         </div>
-        <div class="d-flex align-items-center">
+        <div class="px-5 py-2 d-flex align-items-center gap-3">
             <a href="#" class="text-white">Privacy Policy</a>
             <a href="#" class="text-white">Terms & Conditions</a>
         </div>
-        <div class="d-none d-md-inline-flex ">
+        <div class="d-none d-md-inline-flex gap-1 m-3">
             <i class="fa-brands fa-facebook"></i>
             <i class="fa-brands fa-instagram"></i>
             <i class="fa-brands fa-twitter"></i>
         </div>
     </div>
-    <div class="text-center">
+    <div class="text-center bg-info-subtle m-2">
+        <hr>
         &copy;All Rights Reserved Antor Sutradhar 2024
     </div>
 </footer>
@@ -297,8 +298,6 @@
 
 
 
-
-
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
+</body>
+</html>
